[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/tileset.tres" type="TileSet" id=1]
[ext_resource path="res://screens/LevelEditor/GridPanel.gd" type="Script" id=2]
[ext_resource path="res://assets/tilesets/tileset.png" type="Texture" id=3]
[ext_resource path="res://screens/LevelEditor/TilesPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/sxgd/assets/fonts/Jost-400-Book.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://screens/LevelEditor/GridLines.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="GridPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="Middle" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="BackgroundTileMap" type="TileMap" parent="Middle"]
modulate = Color( 0.290196, 0.290196, 0.290196, 1 )
scale = Vector2( 2, 2 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 16
collision_mask = 0
format = 1

[node name="MiddlegroundTileMap" type="TileMap" parent="Middle"]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 16
collision_mask = 0
format = 1

[node name="ForegroundTileMap" type="TileMap" parent="Middle"]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 16
collision_mask = 0
format = 1

[node name="TileAtCursor" type="Sprite" parent="Middle"]
modulate = Color( 1, 1, 1, 0.498039 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="GridLines" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )

[node name="TilesPanel" parent="." instance=ExtResource( 4 )]

[node name="HUD" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 40
custom_constants/margin_left = 20
custom_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
margin_left = 20.0
margin_top = 40.0
margin_right = 812.0
margin_bottom = 420.0
mouse_filter = 2

[node name="CurrentLayer" type="Label" parent="HUD/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_right = 792.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "Current layer:"

[node name="GridOffset" type="Label" parent="HUD/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_top = 22.0
margin_right = 792.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Grid offset: (0, 0)"

[node name="CellPosition" type="Label" parent="HUD/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_top = 44.0
margin_right = 792.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
text = "Cell position: (0, 0)"

[node name="ZoomLevel" type="Label" parent="HUD/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_top = 66.0
margin_right = 792.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "Zoom level: x1.0"

[node name="CurrentAngle" type="Label" parent="HUD/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_top = 88.0
margin_right = 792.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 1 )
text = "Current angle:"

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD"]
margin_left = 662.0
margin_top = 255.0
margin_right = 812.0
margin_bottom = 420.0
mouse_filter = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Shortcuts" type="Label" parent="HUD/VBoxContainer2"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_right = 150.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 1 )
text = "Left-click: Draw
Right-click: Erase
Middle-click + Drag: Move
Mouse wheel: Zoom
C: Center view
H: Toggle UI
R: Rotate tile
F1/F2/F3: Change map layer"
